<resources>
    <string name="app_name">Newsic</string>


    <!-- Custom Strings  -->
    <string name="content_description">Image Content Description</string>
    <string name="app_moto">News, like music to your ears.</string>
    <string name="global_news">Global News</string>
    <string name="categories_header">Categories</string>
    <string name="trending_header">Trending</string>
    <string name="category_ph">Category</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="api_key">e56d55726f354d99bbaff93c5e374f5b</string>
    <string name="api_error">Error loading news. Check your internet connection…</string>
    <string name="loading">Loading news articles. Please wait...</string>
    <string name="read_full_article">Read Full Article...</string>
</resources>