<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SplashScreenActivity">

    <ImageView
        android:id="@+id/IV_appLogo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerInParent="true"
        android:contentDescription="@string/content_description"
        android:src="@drawable/news_logo" />

    <TextView
        android:id="@+id/RV_appName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/IV_appLogo"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="35sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TV_appMoto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/RV_appName"
        android:padding="10dp"
        android:text="@string/app_moto"
        android:textAlignment="center"
        android:textSize="15sp"
        android:textStyle="italic" />


</RelativeLayout>